# libextc

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  configure  configure.ac  configure~
src/: Makefile.am  Makefile.in  libextc.c
src/channel/: Makefile.am  Makefile.in  chfree.c  chinit.c  chreceive.c  chsend.c
src/include/: asm-port.h  compiler.h  extcdecl.h  extchannel.h  extco.h  extpanic.h  extthrd.h
src/thrd/: Makefile.am  Makefile.in  clone3.S  exit_thread.c  gettid.c  spawn_thread.c
